<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="496dp"
        android:layout_height="224dp"
        android:background="@drawable/list_bg">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/set_pwd_text"
            android:textColor="@color/home_color_golden_1"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/pwd"
            android:textColor="@color/home_color_golden_1"
            android:textSize="20sp" />

        <EditText
            android:text=""
            android:id="@+id/set_pj_pwd_edit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView"
            android:layout_toEndOf="@+id/textView2"
            android:background="@null"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="@color/home_color_golden_1" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignEnd="@+id/set_pj_pwd_edit"
            android:layout_alignStart="@+id/set_pj_pwd_edit"
            android:layout_below="@+id/set_pj_pwd_edit"
            android:layout_marginTop="3dp"
            android:background="@color/color_set_line" />

        <Button
            android:id="@+id/set_pj_sure_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/setup_btn_selector"
            android:text="@string/sure_text"
            android:textColor="@drawable/setup_btn_text_color_selector" />

        <Button
            android:id="@+id/set_pj_cancel_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/set_pj_sure_btn"
            android:layout_marginEnd="50dp"
            android:background="@drawable/setup_btn_selector"
            android:text="@string/cancel_text"
            android:textColor="@drawable/setup_btn_text_color_selector" />
    </RelativeLayout>
</RelativeLayout>