<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.view.LoginActivity">

    <RelativeLayout
        android:id="@+id/singin_top"
        android:layout_width="match_parent"
        android:layout_height="85dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/sigin_in_logo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/singin_top"
        android:background="@drawable/sign_in_bg">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/sign_in_icon2" />

            <EditText
                android:id="@+id/login_pwd_edtText"
                android:layout_width="344dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/sign_in_input"
                android:hint="@string/pwd_sign_hint"
                android:paddingStart="20dp"
                android:textColor="@color/home_color_golden_1"
                android:textColorHint="@color/home_color_golden_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/sign_in_icon" />

            <EditText
                android:id="@+id/login_phone_edtText"
                android:layout_width="344dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/sign_in_input"
                android:hint="@string/user_sign_hint"
                android:paddingLeft="20dp"
                android:textColor="@color/home_color_golden_1"
                android:textColorHint="@color/home_color_golden_1" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="450dp"
            android:layout_height="120dp"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/sign_in_input_selector"
            android:text="@string/sign_in"
            android:textColor="@color/color_black"
            android:textSize="20sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_network"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/homepage_wen" />
</RelativeLayout>
